# DeltaBox

./: README.md
DeltaBox/: index.html  package-lock.json  package.json
DeltaBox/backend/app/: main.py
DeltaBox/backend/app/api/: strategy.py
DeltaBox/backend/app/data/: sample_strategy_input.json
DeltaBox/backend/app/services/: engine_runner.py
DeltaBox/engine/: CMakeLists.txt
DeltaBox/engine/include/: models.hpp  strategy_engine.hpp
DeltaBox/engine/src/: main.cpp  strategy_engine.cpp
DeltaBox/src/: App.css  App.jsx
DeltaBox/src/engine/src/: main.cpp
